--- a/Sukuna-Kitchen.html
+++ b/Sukuna-Kitchen.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sukuna's Malevolent Kitchen</title>
   <link rel="icon" type="image/x-icon" href="https://i.ebayimg.com/images/g/YXEAAOSwSVJjahIB/s-l400.jpg">
-  <link rel="stylesheet" href="./Sukuna-Kitchen styles/SMK-general.css">
-  <link rel="stylesheet" href="./Sukuna-Kitchen styles/SMK-Media-Query.css">
+  <link rel="stylesheet" href="SMK-general.css">
+  <link rel="stylesheet" href="SMK-Media-Query.css">
 </head>
 <body>
   <header id="header">
