--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="nav-bar">
       <div>
         <img src="https://i.ebayimg.com/images/g/YXEAAOSwSVJjahIB/s-l400.jpg" loading="lazy"
-        alt="sukuna's kitchen logo" id="header-img" width="52.66" height="40">
+        alt="sukuna's kitchen logo" id="header-img" width="52" height="40">
         <h1>SUKUNA'S KITCHEN</h1>
       </div>
       <ul>
@@ -30,7 +30,7 @@
   <article id="intro">
   <section>
       <img class="img1" src="https://64.media.tumblr.com/91bc9d342a87c3b61b1737fbb1f05050/27a11962813b2f91-02/s540x810/f2aec89411d813b957479f1cf045e0f1143c0fe2.png" 
-      alt="Sukuna Cooking" width="487.72" height="700" loading="lazy">
+      alt="Sukuna Cooking" width="487" height="700" loading="lazy">
     </section>
   <section>
     <div class="Quote">
@@ -72,7 +72,7 @@
   <section class="menu-container">
 
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/burrito/web-desktop/burrito.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/burrito/web-desktop/burrito.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>BURRITO</p>
           <button class="order-btn">Order</button>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/burrito-bowl/web-desktop/order.png" alt="Salad" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/burrito-bowl/web-desktop/order.png" alt="Salad" loading="lazy">
         <div class="order">
           <p>BURRITO BOWL</p>
           <button class="order-btn">Order</button>
@@ -88,49 +88,49 @@
     </div>
 
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/lifestyle-bowl/web/lifestyle-bowl.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/lifestyle-bowl/web/lifestyle-bowl.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>LIFESTYLE BOWL</p>
           <button class="order-btn">Order</button>
         </div>
     </div>
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/quesadilla/web-desktop/quesadilla.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/quesadilla/web-desktop/quesadilla.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>QUESADILLA</p>
           <button class="order-btn">Order</button>
         </div>
     </div>
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/salad/web-desktop/order.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/salad/web-desktop/order.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>SALAD</p>
           <button class="order-btn">Order</button>
         </div>
     </div>
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/tacos/soft-taco/web-desktop/three-tacos.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/tacos/soft-taco/web-desktop/three-tacos.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>TACOS</p>
           <button class="order-btn">Order</button>
         </div>
     </div>
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/kids-meal/web-desktop/order.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/kids-meal/web-desktop/order.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>KIDS MEAL</p>
           <button class="order-btn">Order</button>
         </div>
     </div>
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/chips-and-guac/web-desktop/order.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/chips-and-guac/web-desktop/order.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>CHIPS & SIDES</p>
           <button class="order-btn">Order</button>
         </div>
     </div>
     <div class="items">
-      <img class="menuitem" width="300" height="170.39" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/pickup-drinks/web-desktop/pickup-drinks.png" alt="Burrito" loading="lazy">
+      <img class="menuitem" width="300" height="170" src="https://www.chipotle.com/content/dam/chipotle/menu/meal-types/pickup-drinks/web-desktop/pickup-drinks.png" alt="Burrito" loading="lazy">
         <div class="order">
           <p>LEMONADE</p>
           <button class="order-btn">Order</button>
@@ -203,11 +203,11 @@
           </li>
         </ul>
         <form>
-          <label for="signup">Sign up to get rewards!</label>
+          <label for="email">Sign up to get rewards!</label>
 
-            <input type="email" required placeholder="email" id="signup" name="email">
+            <input type="email" required placeholder="email" id="email" name="email">
 
-            <input type="password" required placeholder="password" id="signup" name="password">
+            <input type="password" required placeholder="password" id="password" name="password">
      
           <button type="submit">Submit</button>
         </form>
